flapivor/tests/m3/hopix/typechecker/bad/61-read.hopix
val x : Ref<Int> = ref 0

val y : String = !x